        Reviewed by Maciej.

Fix for http://bugs.webkit.org/show_bug.cgi?id=12895
        REGRESSION: imagemap: pointer cursor is shown everywhere
        <rdar://problem/5028163>

        Image with imagemap should never itself be URLElement in hit test results.

        No layout test, cursor state can't be captured.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTest):



Canonical link: https://commits.webkit.org/16764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19941 268f45cc-cd09-0410-ab3c-d52691b4dbfc